# my_fastapi_crud

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/crud/: user_crud.py
app/db/: redis_client.py  session.py
app/models/: user_model.py
app/repository/: user_repository.py
app/schemas/: user_schema.py
