[tool.poetry]
name = "my_fastapi_app"
version = "2.0"
description = "Fast API MySQL Crud Docker"
authors = ["Tech Learner"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "3.9.13"
aiohttp = "3.8.6"
awscli = "1.25.60"
boto3 = "1.24.26"
botocore = "1.27.59"
aiobotocore = "2.4.0"
matplotlib = "3.5.3"
numpy = "1.22.4"
numba = "0.58.0"
pandas = "1.3.5"
pyarrow = "10.0.1"
pylint = "2.12.2"
python-dateutil = "2.8.2"
pytest = "7.2.0"
requests = "2.28.0"
urllib3 = "1.26.15"
s3fs = "2022.8.2"
scikit-learn = "1.3.2"
scipy = "1.7.3"
shap = "0.41.0"
statsmodels = "0.13.1"
stringcase = "1.2.0"
beautifulsoup4 = "4.9.3"
fastapi = "0.108.0"
uvicorn = "0.25.0"
sqlalchemy = "2.0.24"
pymysql = "1.1.1"
redis = "5.0.1"
databases = "^0.9.0"
aiomysql = "^0.2.0"
mysqlclient = "^2.2.4"
python-dotenv = "^1.0.1"
